# Intended

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  intent.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  update-version.sh
docs/: .gitignore  README.md  docfx.json  index.md  installation.md  intent-driven.md  local-development.md  quickstart.md  toc.yml
media/: README.md
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  create-research.sh  enhanced-artifact-scanner.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  create-research.ps1  enhanced-artifact-scanner.ps1  setup-plan.ps1  update-agent-context.ps1
src/intent_cli/: __init__.py
templates/: TEMPLATE_STANDARD.md  agent-file-template.md  checklist-template.md  intent-template.md  plan-template.md  research-template.md  tasks-template.md  vscode-settings.json
templates/.intent/: enhanced-config.json
templates/commands/: Intended.md  Intended.toml  analyze.md  checklist.md  checklist.toml  clarify.md  clarify.toml  constitution.md  constitution.toml  implement.md  intent.md  plan.md  plan.toml  research.toml  tasks.md  tasks.toml
