[project]
name = "intent-cli"
version = "0.0.2"
description = "Intent CLI, part of Intent Kit. A tool to bootstrap your projects for Intent-Driven Development (IDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
intent = "intent_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intent_cli"]